src/objects/HW_CR_Initial_Review__c.object
<CustomObject>
    <description>Initial review from SDE, SME, and Category Team.  Goal: to determine risk and business priority of given change.</description>
    <fields>
        <fullName>CM_Active_Cycle__c</fullName>
        <description>Current cycle time tracking for open review records assigned to category manager.</description>
        <formula>IF( Category_Manager_Reviewer__c  &lt;&gt; null, IF(  HW_CR_CM_Response_Count__c  &lt;&gt; 0, null, NOW() - CreatedDate ), null)</formula>
        <label>CM Active Cycle</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CM_Assigned__c</fullName>
        <formula>IF(  Category_Manager_Reviewer__c  = null, 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CM Assigned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CM_Business_Impact__c</fullName>
        <label>CM Business Impact</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Please Select</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_Business_Justification__c</fullName>
        <label>CM Business Justification</label>
        <picklist>
            <picklistValues>
                <fullName>Cost Reduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Continuity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Please Select</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_Close_Date__c</fullName>
        <description>Final date stamp of category manager response to initial review</description>
        <label>CM Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CM_Cycle_Time__c</fullName>
        <description>If CM is assigned for review, field to track total cycle time from creation of record to completion of CM response.</description>
        <formula>IF( CM_Assigned__c  = 1, CM_Close_Date__c - CreatedDate , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If CM is assigned for review, field to track total cycle time from creation of record to completion of CM response.</inlineHelpText>
        <label>CM Cycle Time</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CM_Reviewer_Comment__c</fullName>
        <description>Comment section for CM to support the given business priority</description>
        <inlineHelpText>Comment section for CM to support the given business priority</inlineHelpText>
        <label>CM Reviewer Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CM_Reviewer_Status__c</fullName>
        <description>Category managers acceptance to continue with approval process</description>
        <label>CM Reviewer Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require Further Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Please Select</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category_Manager_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category Manager Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HW_CR_Initial_Reviews2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Change_Description__c</fullName>
        <description>Cut and paste of base HCR Change Description field</description>
        <inlineHelpText>HW Change Administrator (Work Flow Administrator) to copy and paste exact change description from the base HCR record.</inlineHelpText>
        <label>Change Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HW_CR_CM_Response_Count__c</fullName>
        <formula>CASE( CM_Reviewer_Status__c , &quot;Reject&quot;, -10, &quot;Approve&quot;, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HW CR CM Response Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HW_CR_SDE_Response_Count__c</fullName>
        <formula>CASE(  SDE_Reviewer_Status__c , &quot;Reject&quot;, -10, &quot;Approve&quot;, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HW CR SDE Response Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HW_CR_SME_Response_Count__c</fullName>
        <formula>CASE(  SME_Reviewer_Status__c  , &quot;Reject&quot;, -10, &quot;Approve&quot;, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HW CR SME Response Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HW_CR_Status_Sum__c</fullName>
        <formula>(HW_CR_CM_Response_Count__c  +  HW_CR_SDE_Response_Count__c  +  HW_CR_SME_Response_Count__c) /  Reviewer_Assigned__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HW CR Status Sum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HW_CR_Top_Status__c</fullName>
        <formula>IF( HW_CR_Status_Sum__c  &lt; 0, &quot;Rejected&quot;, 
 IF( HW_CR_Status_Sum__c   &gt;=  1, &quot;Approved&quot;, &quot;In Process&quot; 
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HW CR Top Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HW_Change_Request_Base__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HW Change Request  Base</label>
        <referenceTo>HW_Change_Request_Base__c</referenceTo>
        <relationshipLabel>HW CR Initial Reviews</relationshipLabel>
        <relationshipName>Initial_Reviewer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Initial_Review_Status__c</fullName>
        <description>Field for tracking SDE input status</description>
        <label>Initial Review Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initial Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HW_CR_Initial_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ODM_Review_Status__c</fullName>
        <label>ODM Review Status</label>
        <picklist>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ODM_Reviewer_Comment__c</fullName>
        <label>ODM Reviewer Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ODM_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ODM Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HW_CR_Initial_Reviews4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ODM_Risk_Level__c</fullName>
        <label>ODM Risk Level</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requester_Email__c</fullName>
        <description>The email address for the requester of the change request.  This information to be gathered from the base HCR record.</description>
        <inlineHelpText>The email address for the requester of the change request.  This information to be gathered from the base HCR record.</inlineHelpText>
        <label>Requester Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Review_Process_Status__c</fullName>
        <description>Section status; ok to continue or reject and stop pursuit</description>
        <inlineHelpText>Continue = Proceed with approval process
Reject = Stop approval process</inlineHelpText>
        <label>Reviewer Recomondation</label>
        <picklist>
            <picklistValues>
                <fullName>Continue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reviewer_Assigned__c</fullName>
        <formula>SDE_Assigned__c  +  SME_Assigned__c  +  CM_Assigned__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reviewer Assigned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDE_Active_Cycle__c</fullName>
        <description>Active cycle time of record.  Only available if response not provided.</description>
        <formula>IF( SDE_Reviewer__c  &lt;&gt; null, IF(  HW_CR_SDE_Response_Count__c   &lt;&gt; 0,  null,  NOW()  -  CreatedDate ) , null)</formula>
        <label>SDE Active Cycle</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDE_Assigned__c</fullName>
        <formula>IF( SDE_Reviewer__c  = null, 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SDE Assigned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDE_Close_Date__c</fullName>
        <description>Capture SDE response date to initial review record</description>
        <label>SDE Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SDE_Cycle_Time__c</fullName>
        <description>Returns the number of days between record create date and SDE response date.</description>
        <formula>IF( SDE_Assigned__c = 1, SDE_Close_Date__c -  CreatedDate, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Returns the number of days between record create date and SDE response date.</inlineHelpText>
        <label>SDE Cycle Time</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDE_Reviewer_Comment__c</fullName>
        <description>Comment section for SDE to support the given risk level and recommend approval action.</description>
        <inlineHelpText>Comment section for SDE to support the given risk level and recommend approval action.</inlineHelpText>
        <label>SDE Reviewer Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDE_Reviewer_Status__c</fullName>
        <description>Supplier development engineering&apos;s acceptance to continue with approval process</description>
        <label>SDE Reviewer Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require Further Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Please Select</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SDE_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SDE Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HW_CR_Initial_Reviews1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDE_Risk_Level__c</fullName>
        <label>SDE-Risk Level</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Please Select</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SME_Active_Cycle__c</fullName>
        <description>Cycle time tracking of open requests to SME</description>
        <formula>IF( SME_Reviewer__c  &lt;&gt; null, IF(  HW_CR_SME_Response_Count__c  &lt;&gt; 0, null, NOW() - CreatedDate ), null)</formula>
        <label>SME Active Cycle</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SME_Assigned__c</fullName>
        <formula>IF(  SME_Reviewer__c   = null, 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SME Assigned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SME_Close_Date__c</fullName>
        <description>Final date stamp of SME response to CR.</description>
        <label>SME Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SME_Cycle_Time__c</fullName>
        <description>If SME assigned, field will record total cycle time from creation of record to SME final response.</description>
        <formula>IF( SME_Assigned__c = 1,  SME_Close_Date__c - CreatedDate , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If SME assigned, field will record total cycle time from creation of record to SME final response.</inlineHelpText>
        <label>SME Cycle Time</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SME_Reviewer_Comment__c</fullName>
        <description>Comment section for SME to support the given risk level and recommend approval action.</description>
        <inlineHelpText>Comment section for SME to support the given risk level and recommend approval action.</inlineHelpText>
        <label>SME Reviewer Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SME_Reviewer_Status__c</fullName>
        <description>Subject matter experts acceptance to continue with approval process</description>
        <label>SME Reviewer Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require Further Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Please Select</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SME_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SME Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HW_CR_Initial_Reviews3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SME_Risk_Level__c</fullName>
        <label>SME-Risk Level</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Please Select</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supplier_PCN__c</fullName>
        <description>Cut and paste of base HCR supplier PCN Number</description>
        <inlineHelpText>Change administrator (Work Flow Administrator) copy and paste exact PCN Number from HCR record.</inlineHelpText>
        <label>Supplier PCN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>HW CR Initial Review</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>HW_Change_Request_Base__c</columns>
        <columns>SDE_Reviewer__c</columns>
        <columns>SME_Reviewer__c</columns>
        <columns>Category_Manager_Reviewer__c</columns>
        <columns>ODM_Reviewer__c</columns>
        <columns>HW_CR_Top_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>CR-00001090</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Active</fullName>
        <columns>NAME</columns>
        <columns>HW_Change_Request_Base__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>SDE_Reviewer__c</columns>
        <columns>SDE_Reviewer_Status__c</columns>
        <columns>SME_Reviewer__c</columns>
        <columns>SME_Reviewer_Status__c</columns>
        <columns>Category_Manager_Reviewer__c</columns>
        <columns>CM_Reviewer_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HW_CR_Top_Status__c</field>
            <operation>notContain</operation>
            <value>Approve,Reject</value>
        </filters>
        <label>All Active Initial Reviews</label>
    </listViews>
    <listViews>
        <fullName>All_Active_SME_RQI</fullName>
        <columns>NAME</columns>
        <columns>HW_Change_Request_Base__c</columns>
        <columns>SME_Reviewer__c</columns>
        <columns>HW_CR_Top_Status__c</columns>
        <columns>SME_Reviewer_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HW_CR_Top_Status__c</field>
            <operation>notContain</operation>
            <value>Approve,Reject</value>
        </filters>
        <filters>
            <field>SME_Reviewer_Status__c</field>
            <operation>equals</operation>
            <value>Require Further Info</value>
        </filters>
        <label>All Active SME RQI</label>
    </listViews>
    <listViews>
        <fullName>SDE_Active_Requests</fullName>
        <columns>NAME</columns>
        <columns>HW_Change_Request_Base__c</columns>
        <columns>SDE_Reviewer__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>SDE_Reviewer_Status__c</columns>
        <columns>SDE_Active_Cycle__c</columns>
        <columns>SDE_Risk_Level__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SDE_Assigned__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>SDE_Reviewer_Status__c</field>
            <operation>equals</operation>
            <value>Please Select</value>
        </filters>
        <label>SDE Active Requests</label>
        <sharedTo>
            <role>HWCRBuildAdmin</role>
            <role>HWCRCategoryManager</role>
            <role>HWCRCategorySME</role>
            <role>HWCRCentralSME</role>
            <role>HWCREngineeringLeadPM</role>
            <role>HWCREngineeringManager</role>
            <role>HWCREngineeringPM</role>
            <role>HWCRFactoryTOP</role>
            <role>HWCRFactoryTOPManager</role>
            <role>HWCRGlobalCategory</role>
            <role>HWCRMotoPDMAdmin</role>
            <role>HWCRProductEE</role>
            <role>HWCRProductME</role>
            <role>HWCRSCOperations</role>
            <role>HWCRSDE</role>
            <role>HWCRSDEManager</role>
            <role>HWCRSalesforceAppManager</role>
            <role>HWCRWorkflowAdmin</role>
            <role>HWChangeManagement</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SME_Active_Requests_Fadi</fullName>
        <columns>NAME</columns>
        <columns>HW_Change_Request_Base__c</columns>
        <columns>SME_Reviewer__c</columns>
        <columns>SME_Reviewer_Status__c</columns>
        <columns>SME_Reviewer_Comment__c</columns>
        <columns>Change_Description__c</columns>
        <columns>HW_CR_Top_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SME_Assigned__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>SME_Reviewer__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>HW_CR_Top_Status__c</field>
            <operation>notEqual</operation>
            <value>rejected,approved</value>
        </filters>
        <label>SME Active Requests</label>
    </listViews>
    <nameField>
        <displayFormat>CR-{00000000}</displayFormat>
        <label>HW CR Initial Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HW CR Initial Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>